# post-training-slot-extractor

./: .gitignore  README.md  finetune-spec.md  pyproject.toml
configs/evaluation/: phase01.yaml  phase02.yaml
configs/inference/: llama_server.yaml  llama_server_qwen3_0.6b.yaml  llama_server_qwen3_1.7b.yaml  llama_server_qwen3_4b.yaml  mock.yaml  openai_responses_gpt_5.6_sol.yaml
data/eval/: DATASET_CARD.md  dataset_contract.json  test.jsonl  test.sha256
docs/: project-structure.md
docs/superpowers/: phase-01.md  phase-02.md
project-log/: README.md
project-log/phase-01-scaffold/: Superpower.txt  log.md
project-log/phase-02-eval-baseline/: log.md
project-log/phase-03-dataset/: log.md
project-log/phase-04-training/: log.md
project-log/phase-05-quantization-deploy/: log.md
project-log/phase-06-iteration/: log.md
project-log/phase-07-report/: log.md
reports/baseline-m0/: README.md  comparison.json  qwen3-0.6b.json  qwen3-1.7b.json  qwen3-4b.json
scripts/eval/: collect_analysis.py  run_eval.py  validate_dataset.py
scripts/serve/: setup_llama_cpp.md  start_llama_server.ps1
tests/fixtures/: phase01_eval.jsonl
tests/integration/: test_cli_smoke.py  test_pipeline_llama_server.py  test_pipeline_mock.py  test_pipeline_phase02.py
tests/unit/: test_assertions.py  test_dataset_contract.py  test_default_scorers.py  test_eval_dataset.py  test_inference_backend.py  test_output_schema.py  test_prompt_builder.py  test_reply_semantics.py  test_sample_loader.py  test_scenario_slices.py  test_scorecard.py  test_scorer_preferences.py  test_scorers.py  (+3 more)
(+27 files in other folders)
